--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background-color: darkblue;
+    background-color: rgb(17, 17, 56);
     color: whitesmoke;
 }
