--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<span class="alignTextRight">Welcome {{userName}}</span>
+<!-- <span class="alignTextRight">Welcome {{userName}}</span> -->
+<span class="alignTextRight" [style.color]="fontColor">Welcome {{userName}}</span>
