--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!-- <span class="alignTextRight">Welcome {{userName}}</span> -->
 <span class="alignTextRight" [style.color]="fontColor">Welcome {{userName}}</span>
+<br>
+<div class="alignContentDown">No. Of visitors<input type="text" disabled="true" [value]="visitorCount"></div>
