--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<!-- <span class="alignTextRight">Welcome {{userName}}</span> -->
-<span class="alignTextRight" [style.color]="fontColor">Welcome {{userName|uppercase |gender:genderType}}</span><br>
-<span class="alignTextRight" [style.color]="fontColor">Today's Date : {{todayDate|date:'fullDate'|uppercase}}</span>
-<br>
-<div class="alignContentDown">No. Of visitors<input type="text" disabled="true" [value]="visitorCount"></div>
+<app-header></app-header>
+<app-slider></app-slider>
+<app-footer></app-footer>
