--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,4 +3,4 @@
 <span class="alignTextRight" [style.color]="fontColor">Today's Date : {{todayDate|date:'fullDate'|uppercase}}</span>
 <br>
 <img src="../favicon.ico" alt="Logo" width="50px" height="50px">
-<span>Mickey Star</span>
+<span style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Mickey Star</span>
