--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
-<app-slider></app-slider>
-<app-movie-shows></app-movie-shows>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
