--- a/src/app/movie-shows/movie-shows.component.html
+++ b/src/app/movie-shows/movie-shows.component.html
@@ -1,7 +1,7 @@
-<section *ngFor="let d of movieData">
-  <img [src]="d.posterurl" /><br />
 
+<br><br>
+<h1>Popular Movies</h1><br><section *ngFor="let d of movieData" style="display: inline-block">
+  <img [src]="d.posterurl" height="200px" width="100px" /><br />
   Title:{{ d.title }} <br />
-
   Release Date:{{ d.releaseDate }}
 </section>
