--- a/FirstApp/src/app/movie-details/movie-details.component.html
+++ b/FirstApp/src/app/movie-details/movie-details.component.html
@@ -1,1 +1,7 @@
-<p>movie-details works!</p>
+<br /><br />
+<section>
+  <img [src]="selectedMovieData.posterurl" height="200px" width="100px" /><br />
+  <b>Title: </b>{{ selectedMovieData.title }} <br />
+  <b>Release Date: </b>{{ selectedMovieData.releaseDate }}<br />
+  <b>Story Line: </b>{{selectedMovieData.storyline}}
+</section>
