--- a/conceptapp/src/app/app.component.html
+++ b/conceptapp/src/app/app.component.html
@@ -1,2 +1,9 @@
-Present Address: <input type="text" [(ngModel)]="address">
-Permanent Address:<input type="text" [value]="address">
+<a routerLink="/binding">Binding</a>&nbsp;&nbsp;
+
+<a routerLink="/RESTAPI">REST</a>&nbsp;&nbsp;
+
+<a routerLink="/payment/card">Card</a>&nbsp;&nbsp;
+
+<a routerLink="payment/UPI">UPI</a>&nbsp;&nbsp;
+
+<router-outlet></router-outlet>
