--- a/conceptapp/src/app/app.component.html
+++ b/conceptapp/src/app/app.component.html
@@ -2,8 +2,9 @@
 
 <a routerLink="/RESTAPI">REST</a>&nbsp;&nbsp;
 
-<a routerLink="/payment/card">Card</a>&nbsp;&nbsp;
+<a routerLink="/xyz/card">Card</a>&nbsp;&nbsp;
 
-<a routerLink="payment/UPI">UPI</a>&nbsp;&nbsp;
-
+<a routerLink="xyz/upi">UPI</a>&nbsp;&nbsp;
+<a routerLink="/tdf">TDF</a>&nbsp;&nbsp;
+<a routerLink="/mdf">MDF</a>&nbsp;&nbsp;
 <router-outlet></router-outlet>
